--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -10,13 +10,17 @@
                             <img class="imagem__imagem" src="{{ fotografia.foto.url }}">
                         {% endif %}
                         <div class ="imagem__info"> 
-                        <div class="imagem__texto">
                             <div class="imagem__texto">
-                                <p class="imagem__titulo">{{fotografia.nome}}</p>
-                                <p class="imagem__descricao">{{fotografia.legenda}}</p>
-                                <p class="imagem__texto">{{fotografia.descricao}} </p>
+                                <div class="imagem__texto">
+                                    <p class="imagem__titulo">{{fotografia.nome}}</p>
+                                    <p class="imagem__descricao">{{fotografia.legenda}}</p>
+                                    <p class="imagem__texto">{{fotografia.descricao}} </p>
+                                </div>
                             </div>
-                        </div>
+                            <div>
+                                <a href="{% url 'editar_imagem' %}"><button class="btn btn-success col-12" style="padding: top 5px;" type="submit">Editar</button></a>
+                                <a href="{% url 'deletar_imagem' %}"><button class="btn btn-success col-12" style="padding: top 5px;" type="submit">Deletar</button></a>
+                            </div>
                     </div>
                 </section>
             </section>
